// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`organisation module should handle "requestOrganisation" action 1`] = `
Array [
  Object {
    "id": "123",
    "type": "organisations/organisations/REQUEST_ORGANISATION",
  },
  Object {
    "data": Object {
      "id": "591ab833d1f7fd000e5083a3",
      "name": "Pacocha, Harris and Metz",
      "template": "",
    },
    "type": "organisations/organisations/REQUEST_ORGANISATION_SUCCESS",
  },
]
`;

exports[`organisation module should handle "requestOrganisation" action 2`] = `
Object {
  "data": Object {
    "organisation": Object {
      "id": "591ab833d1f7fd000e5083a3",
      "name": "Pacocha, Harris and Metz",
      "template": "",
    },
  },
  "isFetching": false,
  "isSaving": false,
}
`;
